product css fix

--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -142,7 +142,7 @@ if (Zend_Auth::getInstance()->hasIdentity()){
                 <div class="flex-row imgsmall" id="product-main-img-container">
                     <div class="product-main-img flex-item-24" id="product-main-img">
                         <div id="product-title-div">
-                            <span id="product-title" style="max-width: 600px; float: left">
+                            <span id="product-title" >
                               
                                 <?php if (false === empty($this->product->link_1)): ?><a
                                     href="<?php echo $helpAddDefaultScheme->addDefaultScheme($this->product->link_1); ?>"
