--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -649,7 +649,11 @@ a.partial{
     padding-top: 12px;
   }
 #product-title{
-  font-size: 25px; color: #2673b0; font-weight: bold;
+  font-size: 25px;
+  color: #2673b0; 
+  font-weight: bold;
+  width: 85%;
+  float: left;
 }
 #myCarousel{  
   padding-top: 25px;
