--- a/application/modules/backend/views/scripts/memberpayout/index.phtml
+++ b/application/modules/backend/views/scripts/memberpayout/index.phtml
@@ -44,6 +44,23 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                 <option value="201708" <?php if($lastMonth == '201711') echo 'selected=1'; ?> >2017 Nov</option>
                 <option value="201708" <?php if($lastMonth == '201712') echo 'selected=1'; ?> >2017 Dect</option>
             </select>
+            
+        Status:
+
+            <select name="filter_status" id="filter_status">
+        
+	        <?php 
+		        $optionString = "'':'',";
+	            $payoutStatusModel = new Default_Model_DbTable_PayoutStatus();
+	            $list = $payoutStatusModel->getStatiForSelectList();
+	            foreach ($list as $key => $value) {
+	    	        $optionString= "<option value=".$key.">".$value."</option>";
+	    	        echo $optionString;
+	            }
+	        ?>
+        
+        	</select>
+        
         Member Id: <input type="text" name="filter_member_id" id="filter_member_id"/>
         PayPal-Mail: <input type="text" name="filter_paypal_mail" id="filter_paypal_mail"/>
         e-mail: <input type="text" name="filter_mail" id="filter_mail"/>
@@ -124,18 +141,6 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                 },
                 status: {
                     title: 'Our Payment Status',
-                    /**
-                    options: {'': '', '0': 'New', '1': 'Requested', '10': 'Processed', '50': 'Pending', '100' : 'Completed', '999': 'Denied', '900': 'Refund', '99' : 'Error'},
-                    
-                     *  public static $PAYOUT_STATUS_NEW = 0;
-                        public static $PAYOUT_STATUS_REQUESTED = 1;
-                        public static $PAYOUT_STATUS_PROCESSED = 10;
-                        public static $PAYOUT_STATUS_PENDING = 50;
-                        public static $PAYOUT_STATUS_COMPLETED = 100;
-                        public static $PAYOUT_STATUS_DENIED = 999;
-                        public static $PAYOUT_STATUS_REFUND = 900;
-                        public static $PAYOUT_STATUS_ERROR = 99;
-                     */
                     <?php 
                         $optionString = "'':'',";
                         $payoutStatusModel = new Default_Model_DbTable_PayoutStatus();
@@ -153,13 +158,19 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
             recordsLoaded: function (event, data) {
                 for (var i in data.records) {
                     if (data.records[i].status == 100) {
-                        $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:green !important; color:white !important;");
+                        $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:#3c763d; !important; color:white !important;");
                     }
-                    if (data.records[i].status > 0 && data.records[i].status < 100) {
-                        $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:yellow !important; color:black !important;");
+                    if (data.records[i].status > 0 && data.records[i].status < 99) {
+                        $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:#31708f; !important; color:black !important;");
                     }
-                    if (data.records[i].status > 100) {
-                        $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:red !important; color:white !important;");
+                    if (data.records[i].status > 900 && data.records[i].status < 930) {
+                        $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:#bd8614; !important; color:black !important;");
+                    }
+                    if (data.records[i].status = 900) {
+                        $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:#0f2573 !important; color:black !important;");
+                    }
+                    if (data.records[i].status >= 930) {
+                        $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:#a94442; !important; color:white !important;");
                     }
                 }
             },
