--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -83,7 +83,9 @@
                                  <th style="text-align: right"><?= $this->translate('Filesize'); ?></th>
                                 <!-- <th style="text-align: right"><a href="#modal-installation-instructions" role="button" data-toggle="modal"><?= $this->translate('Install ?'); ?></a></th>
                                 -->
-                                 <th style="text-align: right"><?= $this->translate('OCS-Install'); ?></th>
+                                 <th style="text-align: right;white-space:nowrap"><?= $this->translate('OCS-Install'); ?>
+                                     <a href="#modal-installation-instructions" role="button" data-toggle="modal"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></a>
+                                 </th>
                              </tr>
                              </thead>
                              <tbody></tbody>
@@ -277,9 +279,11 @@
                                      }
 
                                      var installButton = '';
+                                     var downloadButton = '';
                                      if (this.active && ocsUrl) {
-                                         installButton = '<a href="' + ocsUrl + '" class="btn btn-native btn-min-width">Install</a> <a href="#modal-installation-instructions" role="button" data-toggle="modal"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></a> ';
-                                     }
+                                         installButton = '<a href="' + ocsUrl + '" class="btn btn-native btn-min-width">OCS-Install</a>';
+                                         downloadButton = '<a class="btn btn-native btn-min-width"><img src="/images/system/download.svg" alt="download" style="width:20px; height:20px"></a>'
+                                     }                                     
 
                                     //if(this.active == '1') {
                                     var greyText = ' class="activerows"';
@@ -322,7 +326,7 @@
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + count_downloads + '</td>'
                                             + '<td>' + this.created_timestamp + '</td>'
                                             + '<td style="text-align: right">' + humanFileSize(this.size,false) + '</td>'
-                                        + '<td style="text-align: right; white-space:nowrap">' + installButton + '</td>'
+                                        + '<td style="text-align: right; white-space:nowrap">' + installButton + downloadButton+ '</td>'
                                             + '</tr>'
                                         );
 
