--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -288,6 +288,7 @@
 	}
 
 	.opendesktopwidget-main-detail-container-body-content{
+		height: 600px;
 		max-height: 600px;
 		padding-top:20px; 
 		overflow: auto;
