--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -451,14 +451,15 @@
 
 		table.opendesktoppploadfilestable{
 			border-spacing: 0;
-			border-collapse: collapse;			
+			border-collapse: collapse;	
+			background-color: #fff;		
 			th{																
 				border-bottom:  2px solid #ddd;
 				padding: 8px;				
-				vertical-align: bottom;
-				
+				vertical-align: bottom;				
 				line-height: 1.42857143;
 				text-align: left;
+				background-color: #ccc;
 			}
 			td.opendesktoppploadfilestabletdright{
 				text-align: right;				
