--- a/httpdocs/widget/style.css
+++ b/httpdocs/widget/style.css
@@ -490,6 +490,7 @@
 #opendesktop-widget-container #opendesktopwidget-main-detail-container table.opendesktoppploadfilestable {
   border-spacing: 0;
   border-collapse: collapse;
+  background-color: #fff;
 }
 #opendesktop-widget-container #opendesktopwidget-main-detail-container table.opendesktoppploadfilestable th {
   border-bottom: 2px solid #ddd;
@@ -497,6 +498,7 @@
   vertical-align: bottom;
   line-height: 1.42857143;
   text-align: left;
+  background-color: #ccc;
 }
 #opendesktop-widget-container #opendesktopwidget-main-detail-container table.opendesktoppploadfilestable td.opendesktoppploadfilestabletdright {
   text-align: right;
