file table compact

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -57,7 +57,7 @@
                          -->
 
                          <!--table-bordered-->
-                         <table class="table" data-ppload-files="">
+                         <table class="table table-ocs-file" data-ppload-files="">
                              <thead>
                              <?php /**
                              <?php if ($this->product->ppload_collection_id[0] == '!'): ?>
