--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1753,6 +1753,15 @@ ul.meta-nav-top
         }
         #files-panel{
           padding-top: 30px;
+          table.table-ocs-file{
+            td{
+               padding: 3px;
+               vertical-align: middle;
+            }            
+          }
+          .btn{
+            padding: 3px 5px;
+          }
         }
         #updates-panel{
           span.product-update-date{
