--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -348,7 +348,7 @@
                                             + '<td style="text-align: right; ">' + installButton + '</td>'
                                             + '<td style="text-align: right; ">' + downloadButton+ '</td>'
                                             <?php if (Default_Model_DbTable_MemberRole::ROLE_NAME_ADMIN == $userRoleName) : ?>
-                                            + '<td style="text-align: left; "><input type="checkbox" id="data-checkbox-compatible-'+this.id+'" data-is-compatible="" ></td>'
+                                            + '<td style="text-align: center; "><input type="checkbox" id="data-checkbox-compatible-'+this.id+'" data-is-compatible="" ></td>'
                                             <?php endif; ?>
                                             + '</tr>'
                                         );
