--- a/httpdocs/widget/style.css
+++ b/httpdocs/widget/style.css
@@ -21,6 +21,13 @@
   font-size: 20px;
   padding-right: 10px;
 }
+#opendesktop-widget-container .slick-prev:before,
+#opendesktop-widget-container .slick-next:before {
+  color: #ccc !important;
+}
+#opendesktop-widget-container .slick-slide img {
+  margin: 0 auto;
+}
 #opendesktop-widget-container .opendesktop-widget-btn {
   display: inline-block;
   padding: 6px 12px;
@@ -448,7 +455,7 @@
   text-align: center;
 }
 #opendesktop-widget-container #opendesktopwidget-main-detail-container .opendesktopwidget-main-detail-container-body .opendesktopwidget-imgs img {
-  max-width: 800px;
+  max-width: 600px;
   max-height: 400px;
 }
 #opendesktop-widget-container #opendesktopwidget-main-detail-container .opendesktopwidget-main-detail-container-body .opendesktopwidget-imgs .opendesktop-navi {
@@ -604,7 +611,6 @@
   display: flex;
   justify-content: right;
   align-items: center;
-  padding-right: 20px;
 }
 #opendesktop-widget-container .opendesktopwidgetpager ul.opendesktopwidgetpager {
   display: inline-block;
@@ -616,6 +622,7 @@
   display: inline;
 }
 #opendesktop-widget-container .opendesktopwidgetpager ul.opendesktopwidgetpager > li > span {
+  cursor: pointer;
   position: relative;
   float: left;
   margin-left: -1px;
@@ -626,7 +633,6 @@
   border: 1px solid #ddd;
   padding: 5px 10px;
   font-size: 12px;
-  cursor: default;
 }
 #opendesktop-widget-container .opendesktopwidgetpager ul.opendesktopwidgetpager > .active > span {
   z-index: 2;
@@ -750,7 +756,7 @@
   height: 800px !important;
   max-height: 800px !important;
   overflow: hidden;
-  width: 980px;
+  width: 1200px;
   margin: 2em auto !important;
   display: block !important;
   background-color: #ffffff;
