--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -592,7 +592,7 @@
 		display: flex;				
 		justify-content: right;
 		align-items: center;
-		
+		justify-content: flex-end;
 		ul.opendesktopwidgetpager{
 			display: inline-block;
 			padding-left: 0;
