--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -28,8 +28,33 @@
 		img{
 			margin: 0 auto;
 		}
-		} 
+	}
+	button.gonext, button.goprev{
+		
+		position: absolute;
+		top: 50%;
+		display: block;
+		width: 40px;
+		height: 40px;
+		padding: 0;
+		-webkit-transform: translate(0, -50%);
+		-ms-transform: translate(0, -50%);
+		transform: translate(0, -50%);
+		cursor: pointer;
+		color: #ccc;
+		border: none;
+		outline: none;
+		background: transparent;
+		font-size: 4em;
 
+	} 
+
+	button.gonext{
+		right: -40px;
+	}
+	button.goprev{
+		left: -40px;
+	}
 	.opendesktop-widget-btn {
 	    display: inline-block;
 	    padding: 6px 12px;
