backend: excel export

--- a/application/modules/backend/views/scripts/memberpayout/index.phtml
+++ b/application/modules/backend/views/scripts/memberpayout/index.phtml
@@ -54,7 +54,7 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
 	            $payoutStatusModel = new Default_Model_DbTable_PayoutStatus();
 	            $list = $payoutStatusModel->getStatiForSelectList();
 	            foreach ($list as $key => $value) {
-	    	        $optionString= "<option value=".$key.">".$value."</option>";
+	    	        $optionString= "<option value=".$key.">".$key." - ".$value."</option>";
 	    	        echo $optionString;
 	            }
 	        ?>
@@ -77,6 +77,17 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
             sorting: true,
             defaultSorting: 'amount asc',
             title: 'Table of member payouts',
+            toolbar: {
+                items: [{
+                    Tooltip: 'Click here to export this table to excel',
+                    //icon: '/images/paginate.gif',
+                    text: 'Export to Excel',
+                    click: function () {
+                        window.location = '/backend/memberpayout/export';
+                        e.preventDefault();
+                    }
+                }]
+            },
             actions: {
                 listAction: '/backend/memberpayout/list',
                 //createAction: '/backend/memberpayout/create',
