--- a/application/modules/backend/views/scripts/memberpayout/index.phtml
+++ b/application/modules/backend/views/scripts/memberpayout/index.phtml
@@ -83,11 +83,18 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                     //icon: '/images/paginate.gif',
                     text: 'Export to Excel',
                     click: function () {
-                    	window.location = '/backend/memberpayout/export?' + 'filter_status='+$('#filter_status').val()+'&'
-                        + 'filter_yearmonth='+$('#filter_yearmonth').val()+'&'
-                        + 'filter_member_id='+$('#filter_member_id').val()+'&'
-                        + 'filter_paypal_mail='+$('#filter_paypal_mail').val()+'&'
-                        + 'filter_mail='+$('#filter_mail').val();
+                    	url = '/backend/memberpayout/export?filter_status=';
+                    	url += $('#filter_status').val();
+                    	url += '&filter_yearmonth=';
+                    	url += $('#filter_yearmonth').val();
+                    	url += '&filter_member_id=';
+                    	url += $('#filter_member_id').val();
+                    	url += '&filter_paypal_mail=';
+                    	url += $('#filter_paypal_mail').val();
+                    	url += '&filter_mail=';
+                    	url += $('#filter_mail').val();
+                        alert(url);
+                    	window.location = url;
                         e.preventDefault();
                     }
                 }]
