--- a/application/modules/backend/views/scripts/memberpayout/index.phtml
+++ b/application/modules/backend/views/scripts/memberpayout/index.phtml
@@ -93,7 +93,7 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                     	url += $('#filter_paypal_mail').val();
                     	url += '&filter_mail=';
                     	url += $('#filter_mail').val();
-                        alert(url);
+                    	url += '&field_list=yearmonth,member_id as MemberId, paypal_mail, amount, status',
                     	window.location = url;
                         e.preventDefault();
                     }
