--- a/httpdocs/theme/backend/css/backend.css
+++ b/httpdocs/theme/backend/css/backend.css
@@ -13,3 +13,5 @@
 @import url('/theme/backend/css/backend/overview.css');
 @import url('/theme/backend/css/backend/search.css');
 @import url('/theme/backend/css/backend/DDListOrder.css');
+@import url('/theme/backend/css/backend/pling-nav-tabs.css');
+@import url('/theme/backend/css/backend/stati.css');
