--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -21,27 +21,10 @@
  **/
 ?>
 <?= $this->partial('yui.phtml'); ?>
-
-<style type="text/css">
-    .chart {
-        width: 700px;
-        height: 450px;
-        margin-bottom: 10px;
-    }
-
-    .chart_title {
-        display: block;
-        font-size: 1.2em;
-        font-weight: bold;
-        margin-bottom: 0.4em;
-    }
-
-    #tabContainer {
-        width: 720px;
-    }
-</style>
-
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript">
+/*
     $(document).ready(function () {
 
         $("body").addClass("yui-skin-sam");
@@ -50,10 +33,12 @@
 
         var dashboardTabView = new YAHOO.widget.TabView();
 
+        
+
         dashboardTabView.addTab(new YAHOO.widget.Tab({
             label: 'New Members',
-            content: '<div class="chart" id="newmemberchart"></div>',
-            active: true
+            content: '<div class="chart" id="newmemberchart"></div>',   
+             active: true         
         }));
 
         dashboardTabView.addTab(new YAHOO.widget.Tab({
@@ -125,9 +110,213 @@
         });
 
 
-    });
+    });*/
 </script>
-<h2>pling.it Backend</h2>
 <div id="tabContainer">
 
 </div>
+
+
+<div class="pling-nav-tabs">
+<ul class="nav nav-tabs ">
+ <li class="active"><a href="#d3-line" data-toggle="tab">New Members & Projects Line</a></li>
+ <li ><a href="#d3-bar" data-toggle="tab">New Members & Projects Chart</a></li> 
+</ul>
+<div class="tab-content row"  >
+  
+   <div id="d3-bar" class="tab-pane ">
+    comming soon...
+  </div>
+
+   <div id="d3-line" class="tab-pane active ">
+    <div style="width: 100%; padding: 20px">
+        
+        <div id='d3linelableinline'></div>
+        
+    </div>
+  </div>
+
+</div>
+</div> <!--end of tab-->
+
+
+
+<script>
+
+var parseTime = d3.timeParse("%Y-%m-%d");
+var svgLine = d3.select("#d3linelableinline")
+    .append("svg")
+    .attr("width", 1200)
+    .attr("height", 600);
+
+var marginLine = {top: 30, right: 50, bottom: 30, left: 30},
+    widthLine = +svgLine.attr("width") - marginLine.left - marginLine.right,
+    heightLine = +svgLine.attr("height") - marginLine.top - marginLine.bottom,
+    labelPadding = 3;
+
+var g = svgLine.append("g")
+    .attr("transform", "translate(" + marginLine.left + "," + marginLine.top + ")");
+
+
+    d3.json("/backend/index/getnewmembersprojects", function(error, data) {        
+      if (error) throw error;
+      data = data.results;
+      
+      // format the data
+      data.forEach(function(d) {
+          d.date = parseTime(d.date);
+          d.members = +d.members;
+          d.projects = +d.projects;
+      });
+
+      data.columns=['date','members','projects'];      
+      var series = data.columns.slice(1).map(function(key) {
+        return data.map(function(d) {
+          return {
+            key: key,
+            date: d.date,
+            value: d[key]
+          };
+        });
+      });
+
+
+      var xLine = d3.scaleTime()
+          .domain([data[0].date, data[data.length - 1].date])
+          .range([0, widthLine]);
+
+      var yLine = d3.scaleLinear()
+          .domain([0, d3.max(series, function(s) { return d3.max(s, function(d) { return d.value; }); })])
+          .range([heightLine, 0]);
+
+      var zLine = d3.scaleOrdinal(d3.schemeCategory10);
+
+      g.append("g")
+          .attr("class", "axis axis--x")
+          .attr("transform", "translate(0," + heightLine + ")")
+          .call(d3.axisBottom(xLine));
+
+      var serie = g.selectAll(".serie")
+          .data(series)
+        .enter().append("g")
+          .attr("class", "serie");
+
+      serie.append("path")
+          .attr("class", "line")
+          .style("stroke", function(d) { return zLine(d[0].key); })
+          .attr("d", d3.line()
+              .x(function(d) { return xLine(d.date); })
+              .y(function(d) { return yLine(d.value); }));
+
+      var label = serie.selectAll(".label")
+          .data(function(d) { return d; })
+        .enter().append("g")
+          .attr("class", "label")
+          .attr("transform", function(d, i) { return "translate(" + xLine(d.date) + "," + yLine(d.value) + ")"; });
+          
+          label.append("text")
+               .attr("dy", ".35em")
+               .text(function(d) { return d.value; })
+             .filter(function(d, i) { return i === data.length - 1; })
+            
+
+     const newText = label.selectAll('text');
+     const bbox = newText.node().getBBox();
+
+     label.append('rect', 'text')
+         .datum(() => bbox)
+         .attr('x', d => (d.x - labelPadding))
+         .attr('y', d => (d.y - labelPadding))
+         .attr('width', d => (d.width + (2 * labelPadding)))
+         .attr('height', d => (d.height + (2 * labelPadding)));
+
+         label.append("text")
+              .attr("dy", ".35em")
+              .text(function(d) { return d.value; })
+            .filter(function(d, i) { return i === data.length - 1; })
+            .append("tspan")
+              .attr("class", "label-key")
+              .text(function(d) { return " " + d.key; });
+
+    });
+
+
+/*
+d3.tsv("/data/data.tsv", function(d) {
+  d.date = parseTime(d.date);
+  for (var k in d) if (k !== "date") d[k] = +d[k];
+  return d;
+}, function(error, data) {
+  if (error) throw error;
+
+  var series = data.columns.slice(1).map(function(key) {
+    return data.map(function(d) {
+      return {
+        key: key,
+        date: d.date,
+        value: d[key]
+      };
+    });
+  });
+
+  var xLine = d3.scaleTime()
+      .domain([data[0].date, data[data.length - 1].date])
+      .range([0, widthLine]);
+
+  var yLine = d3.scaleLinear()
+      .domain([0, d3.max(series, function(s) { return d3.max(s, function(d) { return d.value; }); })])
+      .range([heightLine, 0]);
+
+  var zLine = d3.scaleOrdinal(d3.schemeCategory10);
+
+  g.append("g")
+      .attr("class", "axis axis--x")
+      .attr("transform", "translate(0," + heightLine + ")")
+      .call(d3.axisBottom(xLine));
+
+  var serie = g.selectAll(".serie")
+      .data(series)
+    .enter().append("g")
+      .attr("class", "serie");
+
+  serie.append("path")
+      .attr("class", "line")
+      .style("stroke", function(d) { return zLine(d[0].key); })
+      .attr("d", d3.line()
+          .x(function(d) { return xLine(d.date); })
+          .y(function(d) { return yLine(d.value); }));
+
+  var label = serie.selectAll(".label")
+      .data(function(d) { return d; })
+    .enter().append("g")
+      .attr("class", "label")
+      .attr("transform", function(d, i) { return "translate(" + xLine(d.date) + "," + yLine(d.value) + ")"; });
+      
+      label.append("text")
+           .attr("dy", ".35em")
+           .text(function(d) { return d.value; })
+         .filter(function(d, i) { return i === data.length - 1; })
+        
+
+ const newText = label.selectAll('text');
+ const bbox = newText.node().getBBox();
+
+ label.append('rect', 'text')
+     .datum(() => bbox)
+     .attr('x', d => (d.x - labelPadding))
+     .attr('y', d => (d.y - labelPadding))
+     .attr('width', d => (d.width + (2 * labelPadding)))
+     .attr('height', d => (d.height + (2 * labelPadding)));
+
+     label.append("text")
+          .attr("dy", ".35em")
+          .text(function(d) { return d.value; })
+        .filter(function(d, i) { return i === data.length - 1; })
+        .append("tspan")
+          .attr("class", "label-key")
+          .text(function(d) { return " " + d.key; });
+
+});
+*/
+
+</script>
