footer powered by

--- a/application/modules/default/views/scripts/partials/footer/template.phtml
+++ b/application/modules/default/views/scripts/partials/footer/template.phtml
@@ -43,7 +43,7 @@
             </div>
 
             <div class="pull-right col-lg-2 col-md-2 col-sm-3 col-xs-3" style="height:66px; ">
-                <div style="position:absolute; bottom:3px;left:20px;color:#666">
+                <div style="position:absolute; bottom:3px;color:#666">
                 Powered by opendesktop.org
                 </div>
                 <div class="pull-right" style="position: absolute; bottom: 0; right:0;">
