--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -215,6 +215,7 @@ $baseurl = Zend_Registry::get('config')->settings->client->default->baseurl;
                 ?>
 
            <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
+               <li><a href="http://opendesktop.org/plings" target="_blank"> Pling</a> </li>
                <li><a href="http://blog.opendesktop.org/" target="_blank"> Blog</a> </li>
                <li><a href="http://forum.opendesktop.org/" target="_blank"> Forum</a> </li>
                <li> <a id="aboutContent" href="#">About </a>   </li>              
