--- a/application/modules/default/views/scripts/donate/index.phtml
+++ b/application/modules/default/views/scripts/donate/index.phtml
@@ -60,9 +60,9 @@ form .SelectionGroup li label {
                 <div class="sidebar-left col-md-2"></div>
                 <div class="content col-md-8">
                     <h2>Please help us</h2>
-                    Since May 2017 we support every month our contributors. 
-                    Contributors can earn <a href="/plings">plings</a> for every download. 
-                    With the pling factor, we calculate the amount and start the payout.
+                    We would like to support the creatives on our platform. That's why we have introduced <a href="/plings">pling</a>. The number of dowloads multiplied by the pling factor gives the amount which is paid out monthly via PayPal.
+                    We have been supporting our creatives this way since May 2017.
+                    <p>Please help us with a donation.</p>
                     
                     
                     <form id="Form_DonationProceed" action="/donate/pay" method="post" enctype="application/x-www-form-urlencoded">
