--- a/application/modules/default/views/scripts/donate/pay-paypal.phtml
+++ b/application/modules/default/views/scripts/donate/pay-paypal.phtml
@@ -45,14 +45,14 @@ if ($this->error) {
             <input type="hidden" name="amount" value="<?= $this->amount ?>">
             
             <div class="Actions">
-                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                <input id="submitBtn" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
             </div>
         </form>
     </div>
     <script>
         //var dgFlow = new PAYPAL.apps.DGFlow({trigger: 'submitBtn'});
-        //$("#submitBtn").click();
+        $("#submitBtn").click();
         //document.location.href = "<?= $this->checkoutEndpoint ?>?cmd=_ap-payment&paykey=<?= $this->paymentKey ?>";
     </script>
 <?php } ?>
